--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-build-properties": "~1.0.0",
     "expo-constants": "~18.0.0",
     "expo-keep-awake": "~15.0.7",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
@@ -41,7 +42,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
